<resources>
    <string name="app_name">哔哩番剧</string>
    <string name="app_service">哔哩番剧下载服务</string>

    <string name="ime_label_next">下一个</string>

    <string name="title_bangumi">番剧</string>
    <string name="title_mine">我的</string>
    <string name="text_version" translatable="false">Ver.%1$s</string>

    <string name="text_back_exit">再点击一次退出</string>
    <string name="text_back_exit_notice">请再点击一次退出</string>

    <string name="title_login_welcome">欢迎使用哔哩番剧</string>
    <string name="text_login_welcome_qrcode">请使用哔哩哔哩 APP 扫码登录</string>
    <string name="text_login_welcome_pwd">请使用哔哩哔哩账号登录</string>
    <string name="text_login_username">请输入手机号/邮箱</string>
    <string name="text_login_phone">请输入手机号</string>
    <string name="text_login_password">请输入密码</string>
    <string name="text_login_get_code">获取验证码</string>
    <string name="text_login_get_code_try_later">%d 秒后再试</string>
    <string name="text_login_get_code_retry">重新获取</string>
    <string name="text_login_code">请输入验证码</string>
    <string name="text_login_country">%s（+%s）</string>
    <string name="text_login_country_selected">+%s</string>
    <string name="text_login_action">登录</string>
    <string name="text_login_action_doing">正在登录</string>
    <string name="text_login_qrcode_start">前往“哔哩哔哩”扫码（将自动保存二维码）</string>
    <string name="text_login_qrcode_exception">二维码获取出错，原因：%1$s，点击重试</string>
    <string name="text_login_info_exception">登录出错，原因：%1$s，点击重试</string>
    <string name="text_login_qrcode_expire">二维码已过期，点击重新获取</string>
    <string name="text_login_qrcode_confirm">已扫描，请在客户端中确认登录</string>
    <string name="text_login_qrcode_save_failed">二维码保存失败</string>
    <string name="text_login_qrcode_save_success">二维码保存成功</string>
    <string name="text_login_notice">此二维码在哔哩哔哩客户端中会提示为 TV 端，请放心登录</string>
    <string name="text_login_success">登录成功</string>
    <string name="text_login_failed">登录失败</string>
    <string name="text_login_error_empty">账号或密码为空</string>
    <string name="text_login_error_phone_empty">请输入手机号！</string>
    <string name="text_login_error_code_empty">验证码为空！</string>
    <string name="text_login_phone_validate">验证手机号</string>
    <string name="text_login_phone_validate_invalid">未知校验链接</string>
    <string name="text_login_phone_validate_failed">手机号验证逻辑失效啦，请联系开发者反馈</string>

    <string name="title_login_web">网页登录</string>

    <string name="text_permission_title">欢迎使用哔哩番剧</string>
    <string name="text_permission_detail">为了向您提供正常的服务，哔哩番剧将向您申请以下必要权限，如果您不授予这些权限，哔哩番剧可能无法正常运行。</string>
    <string name="title_permission_title_write_external">读写手机存储</string>
    <string name="text_permission_content_write_external">创建和下载番剧播放所需的必要文件</string>
    <string name="title_permission_granted">同意</string>
    <string name="text_permission_denied">哔哩番剧需要获得权限授权才能正常使用哦~</string>

    <string name="text_bangumi_edit">输入番剧标题搜索</string>

    <string name="title_setting_type">客户端类型</string>
    <string name="text_setting_type">选择所使用的哔哩哔哩客户端</string>
    <string name="text_setting_type_no_install">未安装</string>
    <string name="text_setting_no_app_installed">您尚未安装任何哔哩哔哩客户端~</string>
    <string name="title_setting_location">下载路径</string>
    <string name="text_setting_location">选择的客户端中设置的路径</string>
    <string name="title_setting_quality">默认清晰度</string>
    <string name="text_setting_quality">下载时默认选中的清晰度</string>
    <string name="title_setting_task">同时下载任务数</string>
    <string name="text_setting_task">下载时最多同时下载的任务数量</string>
    <string name="text_setting_task_show">%1$d 个下载</string>
    <string name="title_setting_auto_start">自动开始下载</string>
    <string name="text_setting_auto_start">启动时是否自动开始未完成的任务</string>

    <string name="title_explore">选择下载路径</string>
    <string name="text_explore_storage">内部储存</string>
    <string name="text_explore_sdcard">SD卡储存</string>

    <string name="title_mine_category_quick">快捷启动</string>
    <string name="title_mine_my_follows">我的追番</string>
    <string name="title_mine_download">下载列表</string>
    <string name="title_mine_more">更多</string>
    <string name="title_mine_category_other">其他</string>
    <string name="title_mine_logout">退出登录</string>
    <string name="title_mine_setting">设置</string>
    <string name="title_mine_about">关于</string>
    <string name="text_mine_developing">没有更多功能了呢(°ー°〃)</string>
    <string name="text_mine_logout_check">您确定要退出登录吗？</string>

    <string name="title_follows_want">想看</string>
    <string name="title_follows_watching">在看</string>
    <string name="title_follows_has_watched">看过</string>

    <string name="title_search_history">历史记录</string>
    <string name="title_search_hotWord">热搜</string>
    <string name="title_search_history_delete">删除历史记录</string>
    <string name="text_search_history_delete">您确定要删除历史记录吗？</string>
    <string name="title_search_go">查看详情</string>
    <string name="text_search_from">番剧：%1$s</string>

    <string name="title_season_unknown">未知番剧</string>
    <string name="title_season_error">加载出错</string>
    <string name="title_season_info">详情</string>
    <string name="title_season_episode">剧集</string>
    <string name="text_season_placeholder" translatable="false">\n\n\n</string>
    <string name="title_season_origin_name">原名</string>
    <string name="title_season_styles">风格</string>
    <string name="title_season_celebrity">演职人员</string>
    <string name="title_season_actors">角色声优</string>
    <string name="title_season_staff">制作信息</string>
    <string name="title_season_evaluate">简介</string>
    <string name="title_season_series">系列</string>
    <string name="title_season_recommend">相关推荐</string>
    <string name="title_season_rating_null">暂无评分</string>
    <string name="text_episode_public_time">更新于%1$s</string>
    <string name="text_episode_index">第 %1$s 话</string>
    <string name="text_season_payment_vip_all">大会员专享观看特权哦~</string>
    <string name="text_season_payment_vip_newest">大会员抢先观看最新剧集哦~</string>
    <string name="text_season_payment_normal">无需会员！赶紧下载下来观看吧~</string>
    <string name="text_season_payment_traveled">港澳台专属，您当前地区无法观看呢~</string>
    <string name="title_season_episode_list">正片</string>
    <string name="text_episode_vip_needed">该剧集需要大会员才能观看哦~</string>
    <string name="text_episode_no_app_installed">您尚未安装任何哔哩哔哩客户端，请安装后下载哦~</string>

    <string name="title_open_other">浏览详情</string>
    <string name="text_open_other">您将前往其他应用以查看详情，是否继续？</string>

    <string name="text_player_episode">选集</string>
    <string name="text_player_dialog_episode">选集（%1$d）</string>
    <string name="text_player_dialog_download">下载</string>
    <string name="text_player_current">正在播放</string>
    <string name="text_player_quality">找不到合适的清晰度</string>

    <string name="text_download">下载任务</string>
    <string name="text_download_doing">正在获取链接</string>
    <string name="text_download_success">任务创建成功</string>
    <string name="title_download_alert_dir">您当前设置的目录无法访问</string>
    <string name="text_download_alert_dir">您当前设置的目录无法访问，已为您重置为默认目录。\n%1$s</string>
    <string name="title_download_alert_dir_p">读写权限受限</string>
    <string name="text_download_alert_dir_p">在 Android 9 及以上的版本，由于系统限制，应用无法访问其他应用的私有目录，因此哔哩番剧将默认把番剧下载至"Download"目录，建议您将哔哩哔哩客户端中的缓存目录同样设置为此目录。</string>
    <string name="text_download_alert_dir_positive">我知道了</string>
    <string name="text_download_alert_dir_negative">不再提示</string>
    <string name="text_download_task_status">共 %1$d 个任务，%2$d 个正在下载</string>
    <string name="text_download_task_all_finished">已完成，共 %1$d 个任务</string>
    <string name="text_download_task_finished">共 %1$d 个任务，已完成 %2$d 个。</string>
    <string name="text_download_task_waiting">等待下载</string>
    <string name="text_download_task_single_finished">已完成</string>
    <string name="text_download_task_preparing">准备中</string>
    <string name="text_download_task_pausing">正在暂停</string>
    <string name="text_download_task_paused">已暂停</string>
    <string name="text_download_task_error">错误：%s</string>

    <string name="title_download_service">哔哩番剧下载服务</string>
    <string name="title_download_service_running">正在下载：%s</string>
    <string name="title_download_service_finish">下载完成：%s</string>
    <string name="title_download_service_error">下载出错：%s</string>

    <string name="title_chanel_download">下载服务消息</string>
    <string name="text_chanel_download">用于展示下载任务状态</string>
    <string name="title_chanel_download_info">下载任务消息</string>
    <string name="text_chanel_download_info">用于当下载任务完成或失败时发出通知</string>

    <string name="title_about_update">检查更新</string>
    <string name="title_about_opensource">开源地址</string>
    <string name="title_about_feedback">问题反馈</string>
    <string name="title_about_license">开源许可</string>
    <string name="title_about_developer_dialog">鸣谢</string>
    <string name="text_about_developer_dialog">(排名不分先后)\nAPP维护：\n忆丶距\n特别鸣谢：\n柠檬大仙</string>

    <string name="title_function_crash">应用意外退出</string>
    <string name="text_function_crash">非常抱歉，应用受不可抗力意外退出，您可以选择复制错误信息反馈给开发者。</string>
    <string name="text_function_crash_copy">复制错误信息</string>
    <string name="text_function_crash_exit">下次一定</string>

    <string name="error_network">请检查网络连接</string>
    <string name="error_login">登陆失败</string>
    <string name="error_login_refresh">登录状态失效，请重新登陆</string>
    <string name="error_login_verify">您的账号登录受限</string>
    <string name="error_bangumi_load">数据加载出错</string>
    <string name="error_bangumi_play">播放失败</string>
    <string name="error_update">检查更新出错</string>
    <string name="error_download_no_client">没有找到可用的哔哩哔哩客户端</string>
    <string name="error_download_url">获取链接失败</string>
    <string name="error_download_flv">不支持FLV格式任务下载</string>
    <string name="error_download_task_exist">任务已存在</string>
    <string name="error_download_start">创建任务失败</string>
    <string name="error_download_retry">下载失败，点击重试</string>
    <string name="error_download_processing_exist">当前已有正在进行的任务！</string>
    <string name="error_download">下载失败</string>

    <string name="title_update_get">有更新版本</string>
    <string name="title_update_already">已是最新版本</string>
    <string name="text_update_content">新的 release 可用：%s\n%s</string>
    <string name="title_update_download">哔哩番剧更新</string>
    <string name="title_update_goto_download">立即下载</string>
    <string name="title_update_not_now">暂不更新</string>
    <string name="title_update_do_not_notice">此版本不再提示</string>

    <string name="title_saf">需要读写权限授权</string>
    <string name="text_saf_a">剧集下载需要您授权外部储存读写权限，我们将引导您前往 SAF（存储访问框架）完成授权，点击“前往授权”后会打开您的“Download”目录。</string>
    <string name="text_saf_b_p">您是 Android 10 及以上用户，SAF 可能会提示您“为保护您的隐私，请选择其他文件夹”。</string>
    <string name="text_saf_c_p">请您根据引导新建一个的文件夹并进入。</string>
    <string name="text_saf_c">请您从右上角菜单新建一个的文件夹并进入。</string>
    <string name="text_saf_d">点击下图可以复制图中的文件夹名称。如果您事先创建过文件夹，或您想使用您现有的文件夹，则直接进入已创建的文件夹即可。</string>
    <string name="text_saf_e">随后点击“允许使用”或“使用此文件夹”完成授权，此文件夹名称您可以自定义）。</string>
    <string name="text_saf_f">为方便您的文件管理，请您尽量避免授权到非空目录，授权后我们将把剧集文件直接创建到您授权的目录！</string>
    <string name="text_saf_action">前往授权</string>
    <string name="text_saf_success">授权成功</string>

    <string name="text_copy">复制</string>
    <string name="text_copy_success">已复制</string>

    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_download_start">下载已开始，请等待下载完成</string>

    <string name="text_back_local_player_exit">再点击一次返回</string>
    <string name="text_back_local_player_exit_notice">请再点击一次返回</string>
</resources>
