<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="640dp"
    android:orientation="vertical"
    android:background="@color/colorWindowBackground">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/dialog_saf_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_saf"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/color_text_normal"/>
            <TextView
                android:id="@+id/dialog_saf_content_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_saf_a"
                android:textSize="14sp"
                android:textColor="@color/color_text_normal"/>
            <ImageView
                android:id="@+id/dialog_saf_image_a"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/pic_saf_download_dir"
                android:scaleType="centerInside"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:id="@+id/dialog_saf_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dialog_saf_content_b_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_saf_b_p"
                    android:textSize="14sp"
                    android:textColor="@color/color_text_normal" />
                <ImageView
                    android:id="@+id/dialog_saf_image_b_p"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/pic_saf_can_not_access"
                    android:scaleType="centerInside"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/dialog_saf_content_c_p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_saf_c_p"
                    android:textSize="14sp"
                    android:textColor="@color/color_text_normal"
                    app:layout_constraintLeft_toLeftOf="parent" />
            </LinearLayout>
            <TextView
                android:id="@+id/dialog_saf_content_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_saf_c"
                android:textSize="14sp"
                android:textColor="@color/color_text_normal"/>
            <TextView
                android:id="@+id/dialog_saf_content_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_saf_d"
                android:textSize="14sp"
                android:textColor="@color/color_text_normal"/>
            <ImageView
                android:id="@+id/dialog_saf_image_c"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/pic_saf_new_dir"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="centerInside"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/dialog_saf_content_e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_saf_e"
                android:textSize="14sp"
                android:textColor="@color/color_text_normal" />
            <ImageView
                android:id="@+id/dialog_saf_image_e"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/pic_saf_use_dir"
                android:scaleType="centerInside"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/dialog_saf_content_f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_saf_f"
                android:textSize="14sp"
                android:textColor="@color/color_text_normal"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/dialog_saf_action"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/text_saf_action"
        android:textColor="@color/colorCompat"
        android:background="@color/colorPrimary"/>
</LinearLayout>