<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    tools:context=".app.activity.LoginQrcode">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login_welcome"
            android:textColor="@color/color_text_normal"
            android:textSize="28sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_login_welcome_qrcode"
            android:textColor="@color/color_text_light"
            android:textSize="14sp" />
        <FrameLayout
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/login_qrcode_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:id="@+id/login_qrcode_loading_base"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_login_transparent"
                android:gravity="center"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/login_qrcode_loading"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center" />
                <TextView
                    android:id="@+id/login_qrcode_notice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@color/color_login_transparent"
                    android:visibility="gone"
                    android:alpha="0"
                    android:gravity="center"
                    android:textColor="@color/color_text_normal"
                    android:textSize="16sp" />
            </LinearLayout>
        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/text_login_notice"
            android:textColor="@color/color_text_light"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_qrcode_start"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/text_login_qrcode_start"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">
        <ImageView
            android:id="@+id/login_banner_left"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:scaleType="fitStart"
            android:src="@drawable/pic_login_banner_left_show"
            tools:ignore="ContentDescription" />
        <ImageView
            android:id="@+id/login_banner_right"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            android:src="@drawable/pic_login_banner_right_show"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>